--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ryanburnette/change-case-object-keys",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Recursively change case of all keys in an object.",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,10 @@
   "author": "Ryan Burnette <ryan.burnette@gmail.com> (https://ryanburnette.com)",
   "license": "ISC",
   "dependencies": {
-    "change-case": "^3.1.0"
+    "change-case": "^3.1.0",
+    "lodash": "^4.17.11"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
