--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "@ryanburnette/change-case-object-keys",
-  "version": "1.0.1",
-  "description": "Recursively change case of all keys in an object.",
+  "version": "1.0.2",
+  "description": "Recursively change case of all keys in an object using change-case.",
   "main": "index.js",
   "scripts": {
     "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "gitea@code.ryanburnette.com:ryanburnette/change-case-object-keys.git"
+    "url": "https://github.com/ryanburnette/change-case-object-keys.git"
   },
   "author": "Ryan Burnette <ryan.burnette@gmail.com> (https://ryanburnette.com)",
   "license": "ISC",
   "dependencies": {
     "change-case": "^3.1.0",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "jest": "^24.8.0"
+    "jest": "^24.9.0"
   }
 }
